--- a/notebooks/setup-bbql-app.ipynb
+++ b/notebooks/setup-bbql-app.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result = vector_store.similarity_search(query=\"カルビクッパ\")"
+    "result = vector_store.similarity_search_with_score(query=\"カルビクッパ\")\n",
+    "print(result)"
    ]
   },
   {
@@ -176,12 +177,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain_cohere.chat_models import ChatCohere\n",
-    "from langchain_core.messages import SystemMessage, HumanMessage\n",
     "\n",
     "chat = ChatCohere(\n",
     "    cohere_api_key=cohere_api_key,\n",
@@ -247,70 +247,6 @@
     ")\n",
     "\n",
     "response = chain.stream(\"カルビクッパってどうやって作るのでしょうか？\")\n",
-    "\n",
-    "for chunk in response:\n",
-    "    print(chunk, end=\"\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Langfuse を用いて LLM アプリケーションの各ステップを可視化する"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "LangChain のチェーン実行に対してトレース情報を取得するための CallbackHandler を定義します。"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from uuid import uuid4\n",
-    "from langfuse.callback import CallbackHandler\n",
-    "\n",
-    "endpoint = os.getenv(\"ENDPOINT\")\n",
-    "public_key = os.getenv(\"PUBLIC_KEY\")\n",
-    "secret_key = os.getenv(\"SECRET_KEY\")\n",
-    "\n",
-    "langchain_callback = CallbackHandler(\n",
-    "    host=endpoint,\n",
-    "    public_key=public_key,\n",
-    "    secret_key=secret_key,\n",
-    "    session_id=str(uuid4())\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "トレース情報を取得するように CallbackHandler をチェーンに渡します。"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "chain = (\n",
-    "    {\"question\": RunnablePassthrough(), \"context\": retriever}\n",
-    "    | prompt_template\n",
-    "    | chat\n",
-    "    | StrOutputParser()\n",
-    ")\n",
-    "\n",
-    "response = chain.stream(\n",
-    "    \"カルビクッパってどうやって作るのでしょうか？\",\n",
-    "    config={\"callbacks\": [langchain_callback]}\n",
-    ")\n",
     "\n",
     "for chunk in response:\n",
     "    print(chunk, end=\"\")"
