--- a/notebooks/setup-bbql-app.ipynb
+++ b/notebooks/setup-bbql-app.ipynb
@@ -106,7 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`../docs/*.txt` に格納されているテキストデータを読み込み、LangChain の Document へ変換します。"
+    "`../app/docs/.txt` に格納されているテキストデータを読み込み、LangChain の Document へ変換します。"
    ]
   },
   {
@@ -118,7 +118,7 @@
     "import glob\n",
     "from langchain.document_loaders import TextLoader\n",
     "\n",
-    "files = glob.glob(\"../docs/*.txt\")\n",
+    "files = glob.glob(\"../app/docs/*.txt\")\n",
     "documents = []\n",
     "\n",
     "for file in files:\n",
