--- a/notebooks/langfuse-playground.ipynb
+++ b/notebooks/langfuse-playground.ipynb
@@ -236,7 +236,7 @@
     "    index_to_docstore_id={},\n",
     ")\n",
     "\n",
-    "files = glob.glob(\"../docs/*.txt\")\n",
+    "files = glob.glob(\"../app/docs/*.txt\")\n",
     "documents = []\n",
     "\n",
     "for file in files:\n",
