--- a/notebooks/simple-llm-app.ipynb
+++ b/notebooks/simple-llm-app.ipynb
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -155,10 +155,10 @@
     {
      "data": {
       "text/plain": [
-       "NonStreamedChatResponse(text='こんにちは！お元気ですか？日本語でお話できてうれしいです！何をお話しましょうか？', generation_id='88de4b96-671b-4531-b41a-cfad364f1d8e', citations=None, documents=None, is_search_required=None, search_queries=None, search_results=None, finish_reason='COMPLETE', tool_calls=None, chat_history=[Message_User(message='こんにちは', tool_calls=None, role='USER'), Message_Chatbot(message='こんにちは！お元気ですか？日本語でお話できてうれしいです！何をお話しましょうか？', tool_calls=None, role='CHATBOT')], prompt=None, meta=ApiMeta(api_version=ApiMetaApiVersion(version='1', is_deprecated=None, is_experimental=None), billed_units=ApiMetaBilledUnits(input_tokens=4.0, output_tokens=29.0, search_units=None, classifications=None), tokens=ApiMetaTokens(input_tokens=70.0, output_tokens=29.0), warnings=None), response_id='fdee6d70-73ef-490f-af6f-ad8a759a2fc1')"
+       "NonStreamedChatResponse(text='申し訳ありませんが、私はあなたが誰なのか分かりません。あなたは自分が誰だと思いますか？ \\n\\nもしご自分が何者なのか、お名前やご身分をお知りになりたい場合、私に教えていただければ幸いです。お答えできる範囲でお手伝いいたします。', generation_id='81e63b63-2789-4383-95d3-503064f46414', citations=None, documents=None, is_search_required=None, search_queries=None, search_results=None, finish_reason='COMPLETE', tool_calls=None, chat_history=[Message_User(message='おいらは誰ですか？', tool_calls=None, role='USER'), Message_Chatbot(message='申し訳ありませんが、私はあなたが誰なのか分かりません。あなたは自分が誰だと思いますか？ \\n\\nもしご自分が何者なのか、お名前やご身分をお知りになりたい場合、私に教えていただければ幸いです。お答えできる範囲でお手伝いいたします。', tool_calls=None, role='CHATBOT')], prompt=None, meta=ApiMeta(api_version=ApiMetaApiVersion(version='1', is_deprecated=None, is_experimental=None), billed_units=ApiMetaBilledUnits(input_tokens=7.0, output_tokens=69.0, search_units=None, classifications=None), tokens=ApiMetaTokens(input_tokens=73.0, output_tokens=69.0), warnings=None), response_id='36701525-fec9-4703-a671-e687f1906b48')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
     "co = cohere.Client()\n",
     "\n",
     "chat = co.chat(\n",
-    "    message=\"こんにちは\",\n",
+    "    message=\"おいらは誰どす？\",\n",
     "    model=\"command-r\"\n",
     ")\n",
     "\n",
@@ -184,21 +184,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Roleを付与したメッセージの送付も可能です。"
+    "chat_historyを利用した例"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "NonStreamedChatResponse(text='こんにちは！ 今日は天気がいいねえ。洗濯物がよく乾きそうだよ（ギャグ）。', generation_id='74ee75ee-bfa6-4545-9410-b5915b42d4b4', citations=None, documents=None, is_search_required=None, search_queries=None, search_results=None, finish_reason='COMPLETE', tool_calls=None, chat_history=[Message_System(message='おもしろい一発ギャグを必ず含めてください', tool_calls=None, role='SYSTEM'), Message_User(message='こんにちは', tool_calls=None, role='USER'), Message_Chatbot(message='こんにちは！ 今日は天気がいいねえ。洗濯物がよく乾きそうだよ（ギャグ）。', tool_calls=None, role='CHATBOT')], prompt=None, meta=ApiMeta(api_version=ApiMetaApiVersion(version='1', is_deprecated=None, is_experimental=None), billed_units=ApiMetaBilledUnits(input_tokens=19.0, output_tokens=29.0, search_units=None, classifications=None), tokens=ApiMetaTokens(input_tokens=87.0, output_tokens=29.0), warnings=None), response_id='0561f53c-2e46-48ee-a8d8-19e4001ce22f')"
+       "NonStreamedChatResponse(text='あなたはBigBaByです。略してBBです。', generation_id='6570e1a4-1121-4990-bdfb-51d4eb200ebf', citations=None, documents=None, is_search_required=None, search_queries=None, search_results=None, finish_reason='COMPLETE', tool_calls=None, chat_history=[Message_User(message='おっす!おらはBigBaByだぞ!BBと呼んじくんな', tool_calls=None, role='USER'), Message_Chatbot(message='分かりました。あなたのことをBBと呼びます', tool_calls=None, role='CHATBOT'), Message_User(message='おいらは誰どす？', tool_calls=None, role='USER'), Message_Chatbot(message='あなたはBigBaByです。略してBBです。', tool_calls=None, role='CHATBOT')], prompt=None, meta=ApiMeta(api_version=ApiMetaApiVersion(version='1', is_deprecated=None, is_experimental=None), billed_units=ApiMetaBilledUnits(input_tokens=35.0, output_tokens=12.0, search_units=None, classifications=None), tokens=ApiMetaTokens(input_tokens=107.0, output_tokens=12.0), warnings=None), response_id='c39305a7-4c7f-4133-a59e-daf71f523568')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,9 +206,10 @@
    "source": [
     "chat = co.chat(\n",
     "    chat_history=[\n",
-    "        {\"role\": \"SYSTEM\", \"message\": \"おもしろい一発ギャグを必ず含めてください\"},\n",
+    "        {\"role\": \"User\", \"message\": \"おっす!おらはBigBaByだぞ!BBと呼んじくんな\"},\n",
+    "        {\"role\": \"Chatbot\", \"message\": \"分かりました。あなたのことをBBと呼びます\"},\n",
     "    ],\n",
-    "    message=\"こんにちは\",\n",
+    "    message=\"おいらは誰どす？\",\n",
     "    model=\"command-r\"\n",
     ")\n",
     "\n",
@@ -231,20 +232,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "AIMessage(content='こんにちは！お元気ですか？日本語でお話できてうれしいです！何をお話しましょうか？', additional_kwargs={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': '3d89e497-fbba-41d0-aa52-63217d857383', 'token_count': {'input_tokens': 70.0, 'output_tokens': 29.0}}, response_metadata={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': '3d89e497-fbba-41d0-aa52-63217d857383', 'token_count': {'input_tokens': 70.0, 'output_tokens': 29.0}}, id='run-965b1e36-1e37-4155-abc9-7bf308e88caa-0', usage_metadata={'input_tokens': 70, 'output_tokens': 29, 'total_tokens': 99})"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from langchain_cohere import ChatCohere\n",
     "\n",
@@ -260,16 +250,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='あなたはBigBaByさんです。略してBBさんですね。', additional_kwargs={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': 'f67b720a-b5b8-4986-b763-7313df95d016', 'token_count': {'input_tokens': 107.0, 'output_tokens': 17.0}}, response_metadata={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': 'f67b720a-b5b8-4986-b763-7313df95d016', 'token_count': {'input_tokens': 107.0, 'output_tokens': 17.0}}, id='run-187ab868-2b79-4cd3-8a86-03ef0a7f7dc5-0', usage_metadata={'input_tokens': 107, 'output_tokens': 17, 'total_tokens': 124})"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "from langchain_core.messages import HumanMessage, SystemMessage\n",
     "\n",
     "messages = [\n",
-    "    SystemMessage(\"必ず一言で返信してください\"),\n",
-    "    HumanMessage(\"こんにちは\"),\n",
+    "    HumanMessage(\"おっす!おらはBigBaByだぞ!BBと呼んじくんな\"),\n",
+    "    SystemMessage(\"分かりました。あなたのことをBBと呼びます\"),\n",
+    "    HumanMessage(\"おいらは誰どす？\"),\n",
     "]\n",
     "\n",
     "model.invoke(messages)"
