Minor update for handson-03

--- a/notebooks/03-llm-as-a-jugde.ipynb
+++ b/notebooks/03-llm-as-a-jugde.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,14 +109,14 @@
     "from langchain.evaluation.schema import EvaluatorType\n",
     "\n",
     "def load_evaluator_by_criteria_key(key: str):\n",
-    "    if os.getenv(\"OPENAI_API_KEY\") == None:\n",
-    "        from langchain_cohere.chat_models import ChatCohere\n",
-    "        cohere_api_key = os.getenv(\"COHERE_API_KEY\")\n",
-    "        llm = ChatCohere(cohere_api_key=cohere_api_key, model=\"command-r-plus\")\n",
-    "    else:\n",
+    "    if os.getenv(\"COHERE_API_KEY\") == None:\n",
     "        from langchain_openai.chat_models import ChatOpenAI\n",
     "        openai_api_key = os.getenv(\"OPENAI_API_KEY\")\n",
     "        llm = ChatOpenAI(api_key=openai_api_key, model=\"gpt-4o-mini\")\n",
+    "    else:\n",
+    "        from langchain_cohere.chat_models import ChatCohere\n",
+    "        cohere_api_key = os.getenv(\"COHERE_API_KEY\")\n",
+    "        llm = ChatCohere(cohere_api_key=cohere_api_key, model=\"command-r-plus\")\n",
     "\n",
     "    evaluator = load_evaluator(\n",
     "        evaluator=EvaluatorType.CRITERIA,\n",
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
     "            )\n",
     "            pprint(result)\n",
     "            langfuse.score(\n",
-    "                name=\"llm-as-a-judge\",\n",
+    "                name=f\"llm-as-a-judge-{key}\",\n",
     "                trace_id=generation.trace_id,\n",
     "                observation_id=generation.id,\n",
     "                value=result.get(\"score\"),\n",
