Added sentiment analysis

--- a/notebooks/03-llm-as-a-jugde.ipynb
+++ b/notebooks/03-llm-as-a-jugde.ipynb
@@ -72,6 +72,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 出力に対する評価"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "LLM as a Judgeの対象となる生成結果の一覧を取得します。今回は、現在時から24時間以内に生成された生成結果を評価対象として扱います。"
    ]
   },
@@ -183,6 +190,116 @@
     "            )\n",
     "\n",
     "execute_evaluation_and_scoring()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### （オプション）入力に対する評価"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "LLM as a Judgeの対象となる一覧を取得します。今回は、現在時から24時間以内に入力されたプロンプトを対象として扱います。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime\n",
+    "from pprint import pprint\n",
+    "\n",
+    "traces = langfuse.get_traces(\n",
+    "    from_timestamp=datetime.datetime.now() - datetime.timedelta(hours=24),\n",
+    "    tags=[\"app\"]\n",
+    ")\n",
+    "\n",
+    "pprint(f\"Fetched {len(traces.data)} generations.\")\n",
+    "pprint(f\"{traces.data[0].__dict__}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "評価用の関数を実装します。今回は、ユーザーの入力プロンプトを”否定的”、”中立的”、”肯定的”にLLMを用いて分類を行います。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.runnables import RunnablePassthrough\n",
+    "from langchain_core.output_parsers import StrOutputParser\n",
+    "from langchain_core.prompts import PromptTemplate\n",
+    "\n",
+    "fallback_prompt = \"\"\"\n",
+    "以下の入力テキストを”否定的”、”中立的”、”肯定的”に分類してください。\n",
+    "\n",
+    "## 入力テキスト\n",
+    "\n",
+    "{{input}}\n",
+    "\"\"\"\n",
+    "\n",
+    "def sentiment_analysis(input: str) -> str:\n",
+    "    if os.getenv(\"COHERE_API_KEY\") == None:\n",
+    "        from langchain_openai.chat_models import ChatOpenAI\n",
+    "        openai_api_key = os.getenv(\"OPENAI_API_KEY\")\n",
+    "        llm = ChatOpenAI(api_key=openai_api_key, model=\"gpt-4o-mini\")\n",
+    "    else:\n",
+    "        from langchain_cohere.chat_models import ChatCohere\n",
+    "        cohere_api_key = os.getenv(\"COHERE_API_KEY\")\n",
+    "        llm = ChatCohere(cohere_api_key=cohere_api_key, model=\"command-r-plus\")\n",
+    "    prompt = langfuse.get_prompt(name=\"sentiment-analysis-prompt\", fallback=fallback_prompt)\n",
+    "    sentiment_analysis_chain = (\n",
+    "        {\"input\": RunnablePassthrough()}\n",
+    "        | PromptTemplate.from_template(prompt.get_langchain_prompt())\n",
+    "        | llm\n",
+    "        | StrOutputParser()\n",
+    "    )\n",
+    "    result = sentiment_analysis_chain.invoke(input)\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "入力プロンプトに対する感情分析を実行します。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def execute_sentiment_analysis():\n",
+    "    for trace in traces.data:\n",
+    "        result = sentiment_analysis(input=trace.input)\n",
+    "        score_map = {\n",
+    "            \"否定的\": 0,\n",
+    "            \"中立的\": 0.5,\n",
+    "            \"肯定的\": 1\n",
+    "        }\n",
+    "        pprint({\"input\": trace.input, \"result\": result})\n",
+    "        langfuse.score(\n",
+    "            name=f\"llm-as-a-judge-sentiment-analysis\",\n",
+    "            trace_id=trace.id,\n",
+    "            observation_id=trace.id,\n",
+    "            value=score_map.get(result, 0.5),\n",
+    "            comment=result\n",
+    "        )\n",
+    "\n",
+    "execute_sentiment_analysis()"
    ]
   }
  ],
