feat: Update chapter 3

--- a/notebooks/chapter03-simple-llm-app-without-langchain.ipynb
+++ b/notebooks/chapter03-simple-llm-app-without-langchain.ipynb
@@ -4,12 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## agentを利用したアプリケーション"
+    "## SDKを利用したシンプルなLLMアプリケーション"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 準備\n",
+    "\n",
+    "必要なライブラリのインストール"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -153,210 +162,82 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### CohereのSDKを利用したLLMアプリケーション\n",
+    "\n",
+    "`load_dotenv`で.envに設定したCOHERE_API_KEYを読み込みます。  \n",
+    "まずはLangChainを利用せず、Cohere社が提供するSDKを利用して、LLMを利用してみます。\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Document(metadata={'source': 'https://docs.smith.langchain.com/overview', 'title': 'Get started with LangSmith | 🦜️🛠️ LangSmith', 'description': 'LangSmith is a platform for building production-grade LLM applications. It allows you to closely monitor and evaluate your application, so you can ship quickly and with confidence. Use of LangChain is not necessary - LangSmith works on its own!', 'language': 'en'}, page_content='\"revision_id\": \"beta\"    },)import { Client, Run, Example } from \"langsmith\";import { evaluate } from \"langsmith/evaluation\";import { EvaluationResult } from \"langsmith/evaluation\";const client = new Client();// Define dataset: these are your test casesconst datasetName = \"Sample Dataset\";const dataset = await client.createDataset(datasetName, {  description: \"A sample dataset in LangSmith.\",});await client.createExamples({  inputs: [    { postfix: \"to LangSmith\" },    { postfix: \"to Evaluations in LangSmith\" },  ],  outputs: [    { output: \"Welcome to LangSmith\" },    { output: \"Welcome to Evaluations in LangSmith\" },  ],  datasetId: dataset.id,});// Define your evaluatorconst exactMatch = async (  run: Run,  example: Example): Promise<EvaluationResult> => {  return {    key: \"exact_match\",    score: run.outputs?.output === example?.outputs?.output,  };};await evaluate(  (input: { postfix: string }) => ({ output: `Welcome ${input.postfix}` }),  {    data: datasetName,    evaluators:')"
+       "NonStreamedChatResponse(text='申し訳ありませんが、あなたが誰なのかをお教えいただけません。あなたは名前をお持ちですか？ 持っている場合、教えていただけますか？ そうすれば、私はその名前をもとに、あなたについて何か情報をお伝えできるかもしれません。', generation_id='e942961b-966c-4fc1-9cc9-10d762dd775f', citations=None, documents=None, is_search_required=None, search_queries=None, search_results=None, finish_reason='COMPLETE', tool_calls=None, chat_history=[Message_User(message='僕は誰ですか？', tool_calls=None, role='USER'), Message_Chatbot(message='申し訳ありませんが、あなたが誰なのかをお教えいただけません。あなたは名前をお持ちですか？ 持っている場合、教えていただけますか？ そうすれば、私はその名前をもとに、あなたについて何か情報をお伝えできるかもしれません。', tool_calls=None, role='CHATBOT')], prompt=None, meta=ApiMeta(api_version=ApiMetaApiVersion(version='1', is_deprecated=None, is_experimental=None), billed_units=ApiMetaBilledUnits(input_tokens=6.0, output_tokens=60.0, search_units=None, classifications=None), tokens=ApiMetaTokens(input_tokens=72.0, output_tokens=60.0), warnings=None), response_id='eed1e14f-0535-4581-8072-767a1a651654')"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\n",
+    "import cohere\n",
     "from dotenv import load_dotenv\n",
     "\n",
     "load_dotenv(\"../.env\")\n",
     "\n",
-    "from langchain_community.document_loaders import WebBaseLoader\n",
-    "from langchain_community.vectorstores import FAISS\n",
-    "from langchain_cohere import CohereEmbeddings\n",
-    "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
+    "co = cohere.Client()\n",
     "\n",
-    "loader = WebBaseLoader(\"https://docs.smith.langchain.com/overview\")\n",
-    "docs = loader.load()\n",
-    "documents = RecursiveCharacterTextSplitter(\n",
-    "    chunk_size=1000, chunk_overlap=200\n",
-    ").split_documents(docs)\n",
-    "vector = FAISS.from_documents(documents, CohereEmbeddings(model=\"embed-multilingual-v3.0\"))\n",
-    "retriever = vector.as_retriever()\n",
+    "chat = co.chat(\n",
+    "    message=\"僕は誰ですか？\",\n",
+    "    model=\"command-r\"\n",
+    ")\n",
     "\n",
-    "retriever.invoke(\"how to upload a dataset\")[0]"
+    "chat"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 77,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "combat_power\n",
-      "曜日に対応するBigBaByの戦闘力を計算します。\n",
-      "\n",
-      "Args:\n",
-      "  day: 曜日です。\n",
-      "{'day': {'$ref': '#/$defs/DayOfWeek'}}\n"
-     ]
-    }
-   ],
    "source": [
-    "from langchain_core.tools import tool\n",
-    "from enum import Enum\n",
-    "\n",
-    "# 曜日のEnum定義\n",
-    "class DayOfWeek(Enum):\n",
-    "    MONDAY = 'Monday'\n",
-    "    TUESDAY = 'Tuesday'\n",
-    "    WEDNESDAY = 'Wednesday'\n",
-    "    THURSDAY = 'Thursday'\n",
-    "    FRIDAY = 'Friday'\n",
-    "    SATURDAY = 'Saturday'\n",
-    "    SUNDAY = 'Sunday'\n",
-    "\n",
-    "day_values_map = {\n",
-    "    DayOfWeek.MONDAY: 0,\n",
-    "    DayOfWeek.TUESDAY: 10,\n",
-    "    DayOfWeek.WEDNESDAY: 20,\n",
-    "    DayOfWeek.THURSDAY: 30,\n",
-    "    DayOfWeek.FRIDAY: 40,\n",
-    "    DayOfWeek.SATURDAY: 50,\n",
-    "    DayOfWeek.SUNDAY: 100,\n",
-    "}\n",
-    "\n",
-    "@tool\n",
-    "def combat_power(day: DayOfWeek) -> int:\n",
-    "    \"\"\"\n",
-    "    曜日に対応するBigBaByの戦闘力を計算します。\n",
-    "\n",
-    "    Args:\n",
-    "      day: 曜日です。\n",
-    "    \"\"\"\n",
-    "\n",
-    "    return day_values_map.get(day)\n",
-    "\n",
-    "print(combat_power.name)\n",
-    "print(combat_power.description)\n",
-    "print(combat_power.args)\n"
+    "chat_historyを利用した例"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[StructuredTool(name='combat_power', description='曜日に対応するBigBaByの戦闘力を計算します。\\n\\nArgs:\\n  day: 曜日です。', args_schema=<class 'langchain_core.utils.pydantic.combat_power'>, func=<function combat_power at 0x7fb2311b6200>),\n",
-       " Tool(name='langsmith_search', description='Search for information about LangSmith. For any questions about LangSmith, you must use this tool!', args_schema=<class 'langchain_core.tools.retriever.RetrieverInput'>, func=functools.partial(<function _get_relevant_documents at 0x7fb24bfa7e20>, retriever=VectorStoreRetriever(tags=['FAISS', 'CohereEmbeddings'], vectorstore=<langchain_community.vectorstores.faiss.FAISS object at 0x7fb231196600>, search_kwargs={}), document_prompt=PromptTemplate(input_variables=['page_content'], input_types={}, partial_variables={}, template='{page_content}'), document_separator='\\n\\n'), coroutine=functools.partial(<function _aget_relevant_documents at 0x7fb24bce49a0>, retriever=VectorStoreRetriever(tags=['FAISS', 'CohereEmbeddings'], vectorstore=<langchain_community.vectorstores.faiss.FAISS object at 0x7fb231196600>, search_kwargs={}), document_prompt=PromptTemplate(input_variables=['page_content'], input_types={}, partial_variables={}, template='{page_content}'), document_separator='\\n\\n'))]"
+       "NonStreamedChatResponse(text='あなたはBigBaBy、またはBBです。', generation_id='36a16fe5-a157-4d58-80ff-1723fe7ec20d', citations=None, documents=None, is_search_required=None, search_queries=None, search_results=None, finish_reason='COMPLETE', tool_calls=None, chat_history=[Message_User(message='おっす!僕はBigBaBy!BBと呼んでね', tool_calls=None, role='USER'), Message_Chatbot(message='分かりました。あなたのことをBBと呼びます', tool_calls=None, role='CHATBOT'), Message_User(message='僕は誰ですか？', tool_calls=None, role='USER'), Message_Chatbot(message='あなたはBigBaBy、またはBBです。', tool_calls=None, role='CHATBOT')], prompt=None, meta=ApiMeta(api_version=ApiMetaApiVersion(version='1', is_deprecated=None, is_experimental=None), billed_units=ApiMetaBilledUnits(input_tokens=31.0, output_tokens=10.0, search_units=None, classifications=None), tokens=ApiMetaTokens(input_tokens=102.0, output_tokens=10.0), warnings=None), response_id='08dfa271-e2c8-4175-819d-5cec7f4f7651')"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from langchain.tools.retriever import create_retriever_tool\n",
-    "\n",
-    "retriever_tool = create_retriever_tool(\n",
-    "    retriever,\n",
-    "    \"langsmith_search\",\n",
-    "    \"Search for information about LangSmith. For any questions about LangSmith, you must use this tool!\",\n",
+    "chat = co.chat(\n",
+    "    chat_history=[\n",
+    "        {\"role\": \"User\", \"message\": \"おっす!僕はBigBaBy!BBと呼んでね\"},\n",
+    "        {\"role\": \"Chatbot\", \"message\": \"分かりました。あなたのことをBBと呼びます\"},\n",
+    "    ],\n",
+    "    message=\"僕は誰ですか？\",\n",
+    "    model=\"command-r\"\n",
     ")\n",
-    "tools = [combat_power, retriever_tool]\n",
-    "tools"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ContentString: おはようございます！今日も一日頑張りましょう！\n",
-      "ToolCalls: []\n"
-     ]
-    }
-   ],
-   "source": [
-    "from langchain_cohere import ChatCohere\n",
     "\n",
-    "model = ChatCohere(model=\"command-r\")\n",
-    "model_with_tools = model.bind_tools(tools)\n",
-    "response = model_with_tools.invoke(\"おはよう\")\n",
-    "print(f\"ContentString: {response.content}\")\n",
-    "print(f\"ToolCalls: {response.tool_calls}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ContentString: I will ask for the combat power of Tuesday and share the result with the user.\n",
-      "ToolCalls: [{'name': 'combat_power', 'args': {'day': 'Tuesday'}, 'id': 'f08970f7019a4f86aa18f3fa25bf1e88', 'type': 'tool_call'}]\n"
-     ]
-    }
-   ],
-   "source": [
-    "response = model_with_tools.invoke(\"BigBaByの月曜の次の日の戦闘力は？\")\n",
-    "print(f\"ContentString: {response.content}\")\n",
-    "print(f\"ToolCalls: {response.tool_calls}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'messages': [HumanMessage(content='BigBaByの木曜の戦闘力は？', additional_kwargs={}, response_metadata={}, id='e6c552bb-4efd-4f2a-bfae-60ae7f727b83'),\n",
-       "  AIMessage(content=\"I will run a search to find out what BigBaBy's combat power is on Thursdays.\", additional_kwargs={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': '2aadfdc0-98a7-4d6c-88aa-86504b14b627', 'tool_calls': [{'id': '52b5b223ce31411a99d1ae7ec5645d47', 'function': {'name': 'combat_power', 'arguments': '{\"day\": \"Thursday\"}'}, 'type': 'function'}], 'token_count': {'input_tokens': 986.0, 'output_tokens': 61.0}}, response_metadata={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': '2aadfdc0-98a7-4d6c-88aa-86504b14b627', 'tool_calls': [{'id': '52b5b223ce31411a99d1ae7ec5645d47', 'function': {'name': 'combat_power', 'arguments': '{\"day\": \"Thursday\"}'}, 'type': 'function'}], 'token_count': {'input_tokens': 986.0, 'output_tokens': 61.0}}, id='run-a51a270b-6291-4f39-878e-793a9f305ce1-0', tool_calls=[{'name': 'combat_power', 'args': {'day': 'Thursday'}, 'id': '02229cf93bea44ef91624ff3163573e3', 'type': 'tool_call'}], usage_metadata={'input_tokens': 986, 'output_tokens': 61, 'total_tokens': 1047}),\n",
-       "  ToolMessage(content='30', name='combat_power', id='51d8bbcf-b308-4bb9-8273-544b851b3480', tool_call_id='02229cf93bea44ef91624ff3163573e3'),\n",
-       "  AIMessage(content=\"BigBaBy's combat power on Thursdays is 30.\", additional_kwargs={'documents': [{'id': 'combat_power:0:3:0', 'output': '30', 'tool_name': 'combat_power'}], 'citations': [ChatCitation(start=39, end=41, text='30', document_ids=['combat_power:0:3:0'])], 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': '86db502c-1c02-4754-a861-d3ad7b62fad4', 'token_count': {'input_tokens': 1079.0, 'output_tokens': 57.0}}, response_metadata={'documents': [{'id': 'combat_power:0:3:0', 'output': '30', 'tool_name': 'combat_power'}], 'citations': [ChatCitation(start=39, end=41, text='30', document_ids=['combat_power:0:3:0'])], 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': '86db502c-1c02-4754-a861-d3ad7b62fad4', 'token_count': {'input_tokens': 1079.0, 'output_tokens': 57.0}}, id='run-4f3af99b-9d0a-40e8-85af-f6f29d34ed8f-0', usage_metadata={'input_tokens': 1079, 'output_tokens': 57, 'total_tokens': 1136})]}"
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from langgraph.prebuilt import create_react_agent\n",
-    "from langgraph.checkpoint.memory import MemorySaver  # an in-memory checkpointer\n",
-    "\n",
-    "system_message = \"You are a helpful assistant.\"\n",
-    "memory = MemorySaver()\n",
-    "langgraph_agent_executor = create_react_agent(\n",
-    "  model, tools,state_modifier=system_message, checkpointer=memory\n",
-    ")\n",
-    "config = {\"configurable\": {\"thread_id\": \"test-thread\"}}\n",
-    "langgraph_agent_executor.invoke(\n",
-    "  {\n",
-    "    \"messages\": [\n",
-    "      (\"user\",\"BigBaByの木曜の戦闘力は？\"),\n",
-    "    ]\n",
-    "  },\n",
-    "  config,\n",
-    ")"
+    "chat"
    ]
   }
  ],
