--- a/notebooks/handson-03-llm-as-a-jugde.ipynb
+++ b/notebooks/handson-03-llm-as-a-jugde.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
     "\n",
     "_ = load_dotenv(find_dotenv())\n",
     "\n",
-    "endpoint = \"http://localhost:3000\"\n",
+    "endpoint = \"http://langfuse-server:3000\"\n",
     "public_key = os.getenv(\"PUBLIC_KEY\")\n",
     "secret_key = os.getenv(\"SECRET_KEY\")"
    ]
@@ -306,7 +306,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -320,9 +320,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
