--- a/notebooks/handson-05-langfuse-metrics-api.ipynb
+++ b/notebooks/handson-05-langfuse-metrics-api.ipynb
@@ -41,7 +41,7 @@
     "\n",
     "_ = load_dotenv(find_dotenv())\n",
     "\n",
-    "endpoint = \"http://localhost:3000\"\n",
+    "endpoint = \"http://langfuse-server:3000\"\n",
     "public_key = os.getenv(\"PUBLIC_KEY\")\n",
     "secret_key = os.getenv(\"SECRET_KEY\")"
    ]
@@ -76,7 +76,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -90,9 +90,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
