--- a/notebooks/handson-02-prompt-management.ipynb
+++ b/notebooks/handson-02-prompt-management.ipynb
@@ -27,21 +27,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ハンズオンに必要な環境変数を `../.env` から読み込みます。"
+    "ハンズオンに必要な環境変数を読み込みます。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "from dotenv import load_dotenv, find_dotenv\n",
     "\n",
-    "_ = load_dotenv(find_dotenv())\n",
-    "\n",
-    "endpoint = \"http://localhost:3000\"\n",
+    "endpoint = \"http://langfuse-server:3000\"\n",
     "public_key = os.getenv(\"PUBLIC_KEY\")\n",
     "secret_key = os.getenv(\"SECRET_KEY\")"
    ]
